tests/baselines/reference/unicodeExtendedEscapesInStrings11_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings11_ES5.ts(6,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings11_ES5.ts (1 errors) ====
    
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  2. Let cu2 be ((cp – 65536) modulo 1024) + 0xDC00.
    // Although we should just get back a single code point value of 0xDC00,
    // this is a useful edge-case test.
    var x = "\u{DC00}";
               
!!! error TS1125: Hexadecimal digit expected.
    